--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,10 @@
 trigger:
- tags:
-  include:
-    - v*
+  branches:
+    include:
+        - master
+  tags:
+   include:
+       - v*
 
 pool:
   vmImage: 'win1803'
