--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,10 @@ pool:
   vmImage: 'win1803'
 
 steps:
+- task: PowerShell@2
+  inputs:
+    filePath: 'UpdateTaskVersion.ps1'
+
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)/DedupeGitReposV0'
