--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
 - task: PowerShell@2
   inputs:
     filePath: 'UpdateTaskVersion.ps1'
+  condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
 
 - task: ArchiveFiles@2
   inputs:
